--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ dev = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["src/paddy_yield_ml"]
+
 [tool.pytest.ini_options]
 minversion = "8.0"
 addopts = "-q"
@@ -29,10 +32,18 @@ testpaths = ["tests"]
 pythonpath = ["src"]
 
 [tool.ruff]
-line-length = 100
+line-length = 120
 target-version = "py310"
+extend-exclude = [
+  "notebooks",
+  "outputs",
+  "presentation",
+  "results",
+  "baseline.py",
+  "feature_prepare.py",
+]
 
 [tool.ruff.lint]
-select = ["E", "F", "I", "B", "UP", "N"]
+select = ["E", "F", "I", "B", "UP"]
 ignore = []
 
