--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,13 @@ description = "Enterprise-ready paddy yield baseline and feature-preparation pip
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+  "catboost>=1.2.8",
+  "lightgbm>=4.6.0",
   "matplotlib>=3.8.0",
   "numpy>=1.26.0",
   "pandas>=2.2.0",
   "scikit-learn>=1.5.0",
+  "xgboost>=3.1.0",
 ]
 
 [dependency-groups]
