chore: track generated carob pipeline outputs

--- a/.gitignore
+++ b/.gitignore
@@ -30,21 +30,13 @@ outputs/*
 
 # CAROB placeholders (active track)
 !outputs/carob_baseline/
-!outputs/carob_baseline/.gitkeep
+!outputs/carob_baseline/**
 !outputs/carob_feature_prepare/
-!outputs/carob_feature_prepare/.gitkeep
+!outputs/carob_feature_prepare/**
 !outputs/carob_model_compare/
-!outputs/carob_model_compare/.gitkeep
+!outputs/carob_model_compare/**
 !outputs/carob_causal_pilot/
-!outputs/carob_causal_pilot/.gitkeep
-outputs/carob_baseline/*
-!outputs/carob_baseline/.gitkeep
-outputs/carob_feature_prepare/*
-!outputs/carob_feature_prepare/.gitkeep
-outputs/carob_model_compare/*
-!outputs/carob_model_compare/.gitkeep
-outputs/carob_causal_pilot/*
-!outputs/carob_causal_pilot/.gitkeep
+!outputs/carob_causal_pilot/**
 
 # Legacy outputs (kept for compatibility)
 !outputs/baseline/
